<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/first_view_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView_style"
            tools:text="12"/>
        <TextView
            android:id="@+id/second_view_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView_style"
            tools:text="34"/>
        <TextView
            android:id="@+id/third_view_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView_style"
            tools:text="56"/>
        <TextView
            android:id="@+id/fourth_view_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView_style"
            tools:text="78"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_sqrt"
                style="@style/Button_style"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:text="@string/sqrt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_factorial"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:textAllCaps="false"
                android:text="@string/factorial"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_add_sub"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/add_sub"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_simple_interest"
                style="@style/Button_style"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:fontFamily="monospace"
                android:text="@string/simple_interest"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_ac"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/ac"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_c"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/c"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_backspace"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/backspace"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_max"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/max"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_seven"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/seven"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_eight"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/eight"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_nine"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/nine"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_division"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/division"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_four"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/four"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_five"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/five"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_six"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/six"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_multiply"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/multiply"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_one"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/one"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_two"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/two"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_three"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/three"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_subtraction"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/subtraction"/>
        </TableRow>

        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_min"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/min"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_zero"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/zero"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_enter"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/enter"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/b_addition"
                android:layout_height="80dp"
                android:layout_width="wrap_content"
                style="@style/Button_style"
                android:text="@string/addition"/>
        </TableRow>
    </TableLayout>

</LinearLayout>